--- a/vehicle_js/src/main/resources/static/View/baobiao/vehicletotal.html
+++ b/vehicle_js/src/main/resources/static/View/baobiao/vehicletotal.html
@@ -668,7 +668,7 @@
 		});
 	}
 
-    var comboChange = function(){
+/*    var comboChange = function(){
         var comboList = $(this).combobox("getValues");
         var comboText = $(this).combobox("getText").split(",");
         var newComboList = [];
@@ -688,7 +688,7 @@
             newComboList = [""];
         }
         $(this).combobox('setValues', newComboList);
-    }
+    }*/
 
 </script>
 </body>
