--- a/vehicle_js/src/main/resources/static/Resource/css/index/goodsStyle.css
+++ b/vehicle_js/src/main/resources/static/Resource/css/index/goodsStyle.css
@@ -59,22 +59,90 @@ body {
 	background: #ebeff0;
 }
 .container {
-	height:545px;
-    width: 1000px; 
+/*	height:545px;
+    width: 1000px; */
 	overflow:auto; 
 }
 .first {
-	padding: 20px 28px;
+	padding: 10px 16px;
 	background: #fff;
 	border: 1px solid #dfdfdf;
 	border-radius: 4px;
 }
 .first-title {
-	color: #333;
-	font-size: 16px;
+	background-color: #3B89F3;
+	font-size: 28px;
+	text-align: center;
 }
 .first-title span {
-	font-size: 18px;
+	line-height: 40px;
+	color: white;
+	font-size: 28px;
+}
+
+.second-1 {
+	 float: left;
+	 width: 20%;
+	 height: 350px;
+	 margin-top: 10px;
+	 margin-left: 15px;
+	 border: 1px solid #dfdfdf;
+	 border-radius: 4px;
+	 background-color: #E0E0E0;
+ }
+
+.second-1-1 {
+	padding-top: 20px;
+	padding-left: 10px;
+}
+
+.second-1-1 p{
+	margin-top: 10px;
+	font-size: 20px;
+}
+
+ .second-dep-1 {
+	background-color: #a4130f;
+	text-align: center;
+	line-height: 40px;
+	font-size: 28px;
+	color: white;
+ }
+
+.second-2 {
+	float: left;
+	width: 38%;
+	height: 350px;
+	margin-top: 10px;
+	margin-left: 10px;
+	border: 1px solid #dfdfdf;
+	border-radius: 4px;
+	background-color: #faf9f9;
+}
+
+.second-dep-2 {
+	text-align: center;
+	line-height: 46px;
+	font-size: 32px;
+}
+
+.second-pro-2 {
+  background-color: #8E8E8E;
+  text-align: center;
+  line-height: 40px;
+  font-size: 28px;
+  color: white;
+}
+
+.second-3 {
+	float: left;
+	width: 22%;
+	height: 350px;
+	margin-top: 10px;
+	margin-left: 35px;
+	border: 1px solid #dfdfdf;
+	border-radius: 4px;
+	background-color: #E0E0E0;
 }
 /* .first-list li {
 	float: left;
@@ -136,17 +204,7 @@ body {
 	background: #fff;
 	margin-top: 16px;
 }
-.second-left {
-	float: left;
-	width: 380px;
-	height: 300px;
-	padding: 10px 18px;
-	margin-top : 16px;
-	margin-left: 40px;
-	background: #fff;
-	border: 1px solid #dfdfdf;
-	border-radius: 4px;
-}
+
 .all-title {
 	font-size: 14px;
 	color: #333;
@@ -155,17 +213,7 @@ body {
 	margin: 0 auto;
 	margin-top: 25px;
 }
-.second-right {
-	float: right;
-	width: 380px;
-	height: 300px;
-	padding: 10px 18px;
-	margin-top : 16px;
-	margin-right: 40px;
-	background: #fff;
-	border: 1px solid #dfdfdf;
-	border-radius: 4px;
-}
+
 .third {
 	padding: 10px 28px;
 	background: #fff;
